# YiRage

./: .gitignore  CMakeLists.txt  COPYRIGHT_HEADERS.txt  NOTICE  README.md  README.pypi.md  YIRAGE_INTRODUCTION.md  YIRAGE_RELEASE_STATUS.md  analyze.sh  analyze_multibackend.sh  config.ascend.cmake  config.cmake  config.maca.cmake  setup.py
benchmark/: c500_performance.py  gated_mlp.py  group_query_attention.py  lora.py  maca_c500_benchmark.py  maca_full_comparison.py  maca_native_benchmark.py  maca_pytorch_comparison.py  maca_vs_pytorch.py  moe.py  multi_head_attention.py  multi_query_attention.py  norm_transformer.py  pytorch_baseline.py  qknorm_gqa.py  quick_comparison.py  rmsnorm.py  yirage_pytorch_timing.py  yirage_vs_pytorch_c500.py
benchmark/baselines/pytorch/: gated_mlp.py  gqa.py  lora.py  norm_transformer.py  qknorm_gqa.py  rms_norm.py
benchmark/end-to-end/: chameleon.py  llama.py  lora.py  ngpt.py
benchmark/end-to-end/ascend/: README.md  llama_ascend.py
benchmark/end-to-end/maca/: README.md  __init__.py  chameleon_maca.py  llama_maca.py  lora_maca.py  ngpt_maca.py  run_all.py
benchmark/saved_mugraphs/mps/: yirage_cached_mugraphs_7310eff92c865e30.json
demo/: backend_selection_demo.py  maca_optimization_demo.py  maca_superopt_test.py
demo/llama3/: demo.py
demo/qwen2.5/models/: modeling_qwen2.py
demo/qwen3/: demo.py  demo_30B_A3B.py  demo_30B_A3B_hopper.py  demo_chat.py  demo_hopper.py  demo_modal.py  demo_modal_ssh.py
demo/qwen3/models/: modeling_qwen3.py
docs/: .$architecture.drawio.bkp  ARCHITECTURE_DIAGRAM_GUIDE.md  PROFILING_GUIDE.md  architecture.drawio  architecture.md  ascend_implementation_guide.md  ascend_installation_guide.md  ascend_integration_architecture.md  ascend_quick_start.md  backend_config_comparison.md  maca_complete_guide.md  maca_quick_start.md  mps_strategy_analysis.md  v100_support.md
docs/mpk/: multi_backend_design.md
docs/source/: conf.py  index.rst
docs/ypk/: backend_usage.md  multi_backend_design.md  tma.md
include/yirage/: config.h  type.h  vector_types.h
include/yirage/backend/: ascend_backend.h  backend_interface.h  backend_registry.h  backends.h  cpu_backend.h  cuda_backend.h  cudnn_backend.h  maca_backend.h  mkl_backend.h  mps_backend.h  nki_backend.h  triton_backend.h
include/yirage/cpu/: cmem_tensor.h
include/yirage/kernel/: all_reduce.h  chunk.h  customized.h  device_memory_manager.h  device_tensor.h  element_binary.h  element_unary.h  graph.h  matmul.h  operator.h  reduction.h  rms_norm.h  runtime.h  task_register.h
include/yirage/nki_transpiler/: helper_function.h  transpile.h  utils.h
include/yirage/persistent_kernel/: persistent_kernel.cuh  runtime_header.h  tma.cuh
include/yirage/search/: config.h  dim_strategy.h  mps_profiler.h  search_c.h
include/yirage/threadblock/: graph.h  operator.h  smem_tensor.h
include/yirage/transpiler/: ascend_transpiler.h  structs.h  transpiler.h  utils.h
include/yirage/triton_transpiler/: transpile.h
include/yirage/utils/: ascend_helper.h  containers.h  cuda_helper.h  fingerprint_functions.h  hash_utils.h  maca_helper.h  math_utils.h
python/yirage/: __init__.py  ascend_config.py  ascend_transpiler.py  backend_api.py  backend_compiler.py  kernel.py  maca_config.py  mps_config.py  multi_backend_kernel.py  persistent_kernel.py  utils.py
python/yirage/_cython/: CCore.pxd  core.pyx
scripts/: add_backend_support.py  convert_benchmark_to_multibackend.py  display_task_graph.py  rename_to_yirage.sh  setup_maca.sh  update_copyright_yirage.sh  validate_multi_backend.sh  verify_maca.py
src/backend/: ascend_backend.cc  backend_init.cc  backend_registry.cc  backend_utils.cc  backends.cc  cpu_backend.cc  cuda_backend.cc  cudnn_backend.cc  maca_backend.cc  mkl_backend.cc  mps_backend.cc  nki_backend.cc  triton_backend.cc
src/base/: data_type.cc
src/kernel/: all_reduce.cc  chunk.cc  customized.cc  device_memory_manager.cc  device_memory_manager.cu  device_tensor.cc  element_binary.cc  element_unary.cc  graph.cc  input.cc  matmul.cc  output.cc  reduction.cc  rms_norm.cc  runtime.cc  task_register.cc  triton_code_gen.cc
src/kernel/ascend/: all_reduce_kernel.ascend  ascend_fingerprint_kernels.cc  ascend_kernel_generator.cc  ascend_optimizer.cc  customized_kernel.ascend  device_memory_manager.cc  input_kernel.ascend  (+7 more)
src/nki_transpiler/: helper_function.cc  transpile.cc  transpile_tb.cc  utils.cc
src/search/: config.cc  dim_strategy.cc  mps_profiler.cc  search.cc  search_c.cc  search_context.cc
src/threadblock/: concat.cc  element_binary.cc  graph.cc  input_loader.cc  matmul.cc  reduction.cc
src/transpiler/: ascend_transpiler.cc  ascend_transpiler_stub.cc  resolve_tensor_layout.cc  transpile.cc  transpiler_kn.cc  transpiler_stub.cc  transpiler_tb.cc  transpiler_tb_blackwell.cc  transpiler_tb_hopper.cc
src/triton_transpiler/: transpile.cc
src/utils/: containers.cc  cuda_helper.cu
status/: ALL_BACKENDS_STATUS.md  ATTRIBUTION.md  CHANGELOG_MULTI_BACKEND.md  COMPLETE_BACKEND_IMPLEMENTATION.md  COMPLETE_STATUS.md  COPYRIGHT_UPDATE_SUMMARY.md  FINAL_IMPLEMENTATION_OVERVIEW.md  FINAL_SUCCESS_REPORT.md  GLOBAL_VERIFICATION_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_FINAL_REPORT.md  IMPLEMENTATION_VERIFIED.md  INSTALL.md  LICENSE_STRATEGY.md  MULTI_BACKEND_INDEX.md  MULTI_BACKEND_README.md  NCU_Usage_Manual.md  PROJECT_COMPLETE.md  QUICKSTART_MULTI_BACKEND.md  README.md  README_COPYRIGHT_UPDATE.md  README_IMPLEMENTATION_COMPLETE.md  RENAMING_CHECKLIST.md  RENAMING_PLAN.md  RENAMING_SUCCESS_REPORT.md  VALIDATION_REPORT.md  YIRAGE_COMPLETE.md  YIRAGE_FINAL_BRANDING.md  YIRAGE_NAMING_OPTIONS.md  YIRAGE_READY.md  YIRAGE_REBRANDING_GUIDE.md
tests/ascend/: test_superoptimize.py  test_triton_integration.py
tests/backend/: test_backend_registry.cc
tests/python/: test_backend_framework.py  test_tensor_program.py
tests/runtime_python/: runtime_kernel_wrapper.cu  setup.py  test_linear.py  test_multitoken_paged_attention.py  test_norm_linear.py  test_paged_attention.py  test_silu_mul_linear.py  test_v100_matmul.py
(+163 files in other folders)
